# dagster-dlt

./: .env.example  .gitignore  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
ny_taxi/: dbt_project.yml  profiles.yml
ny_taxi/models/: source.yml
ny_taxi/models/bronze/: dim_zones.sql
ny_taxi/models/gold/: dm_monthly_zone_revenue.sql  fact_trips.sql
ny_taxi/models/silver/: green_tripdata.sql  schema.yml  yellow_tripdata.sql
queries/: bronze_tables.sql
src/: __init__.py  definitions.py  jobs.py  schedule.py  settings.py
src/assets/: ny_taxi.py  ny_taxi_dbt.py
src/resources/: s3.py
src/sources/: ny_taxi.py
